// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > project should handle default state 1`] = `
Object {
  "currentProject": null,
  "projects": Array [],
  "projectsById": Object {},
}
`;

exports[`reducers > project should handle delete project 1`] = `
Object {
  "currentProject": null,
  "projects": Array [],
  "projectsById": Object {},
}
`;

exports[`reducers > project should handle delete regional analysis 1`] = `
Object {
  "regionalAnalyses": Array [
    Object {
      "bundleId": "5678",
      "cutoffMinutes": 60,
      "deleted": true,
      "grid": "Jobs_total",
      "height": 300,
      "id": "abcd",
      "name": "ANALYSIS 1",
      "north": 20024,
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bikeTrafficStress": 4,
        "carSpeed": 20,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxCarTime": 45,
        "maxRides": 4,
        "maxWalkTime": 20,
        "minBikeTime": 10,
        "minCarTime": 10,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "streetTime": 90,
        "suboptimalMinutes": 5,
        "toTime": 32400,
        "transitModes": "TRANSIT",
        "walkSpeed": 1.3888888888888888,
      },
      "scenarioId": "1234",
      "travelTimePercentile": -1,
      "variant": 0,
      "west": 20015,
      "width": 300,
      "zoom": 9,
    },
    Object {
      "bundleId": "5678",
      "cutoffMinutes": 60,
      "grid": "Jobs_total",
      "height": 300,
      "id": "efgh",
      "name": "ANALYSIS 2",
      "north": 20024,
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bikeTrafficStress": 4,
        "carSpeed": 20,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxCarTime": 45,
        "maxRides": 4,
        "maxWalkTime": 20,
        "minBikeTime": 10,
        "minCarTime": 10,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "streetTime": 90,
        "suboptimalMinutes": 5,
        "toTime": 32400,
        "transitModes": "TRANSIT",
        "walkSpeed": 1.3888888888888888,
      },
      "scenarioId": "4321",
      "travelTimePercentile": 42,
      "variant": 1,
      "west": 20015,
      "width": 300,
      "zoom": 9,
    },
  ],
}
`;

exports[`reducers > project should handle set all projects 1`] = `
Object {
  "currentProject": null,
  "projects": Array [
    Object {
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "id": "1",
      "name": "Mock Project",
    },
  ],
  "projectsById": Object {
    "1": Object {
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "id": "1",
      "name": "Mock Project",
    },
  },
}
`;

exports[`reducers > project should handle set project 1`] = `
Object {
  "currentProject": Object {
    "bounds": Object {
      "east": -76,
      "north": 39,
      "south": 38,
      "west": -77,
    },
    "description": "Project description",
    "id": "1",
    "name": "Mock Project",
  },
  "projects": Array [
    Object {
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "id": "1",
      "name": "Mock Project",
    },
  ],
  "projectsById": Object {
    "1": Object {
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "description": "Project description",
      "id": "1",
      "name": "Mock Project",
    },
  },
}
`;
